--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "hackathon-starter",
-  "version": "6.1.0",
-  "description": "A boilerplate for Node.js web applications",
+  "name": "eventregi",
+  "version": "0.0.1",
+  "description": "Event Registration",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sahat/hackathon-starter.git"
+    "url": "https://github.com/jamespro/eventregi.git"
   },
   "license": "MIT",
-  "author": "Sahat Yalkabov",
+  "author": "",
   "contributors": [
-    "Yashar Fakhari (https://github.com/YasharF)"
+    ""
   ],
   "scripts": {
     "postinstall": "npm rebuild node-sass",
