--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "pug": "^3.0.2",
     "stripe": "^8.130.0",
     "tumblr.js": "^3.0.0",
-    "twilio": "^3.54.0",
+    // "twilio": "^3.54.0",
     "twitter-lite": "^0.14.0",
     "validator": "^13.5.2"
   },
