--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@ladjs/bootstrap-social": "^7.0.2",
     "@octokit/rest": "^18.0.12",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/pickers": "^3.2.10",
+    "@testing-library/jest-dom": "^5.0.2",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^8.1.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -31,12 +37,14 @@
     "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
     "connect-mongo": "^3.2.0",
+    "date-fns": "^2.9.0",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "formik": "^2.1.3",
     "googleapis": "^67.0.0",
     "instagram-node": "^0.5.8",
     "jquery": "^3.5.1",
@@ -69,11 +77,16 @@
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.8.1",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
     "pug": "^3.0.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0",
     "stripe": "^8.130.0",
     "tumblr.js": "^3.0.0",
     "twitter-lite": "^0.14.0",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
