--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.10.11",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
-    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.22.1",
     "formik": "^2.2.8",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
