--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-country-region-selector": "^3.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
